AUTH SETTING, in the hands of god, lets go, friyay